apps/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: labtalos
spec:
  controllerName: io.cilium/gateway-controller
