apps/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: labtalos-gateway
  namespace: default
spec:
  gatewayClassName: labtalos
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-izycki
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - value: 192.168.1.60
      type: IPAddress
