apps/gateway-api/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    teste: teste
spec:
  parentRefs:
    - name: labtalos-gateway
      namespace: default
  hostnames:
    - argocd.izycki.com.br
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
